# bygfoot-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  INSTALL  build.rs  bygfoot.cmb
resources/: bygfoot.cmb  bygfoot.gresource.xml  splash.ui  startup.ui
src/: lib.rs  main.rs  rust_functions.h  window.c
src/domain/: option.rs
src/store/: file_store.rs  help_store.rs  hints_store.rs  mod.rs  store.rs
src/ui/: app.rs  bygfoot.cmb  mod.rs
src/ui/app/: mod.rs
src/ui/app/splash/: mod.rs  splash.rs
src/ui/splash/: mod.rs  splash.rs  splash.ui
src/ui/startup/: mod.rs  startup.rs  startup.ui
src/ui/window/: mod.rs  splash.rs
src/window/: mod.rs  splash.rs  startup.rs
